--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ nav {
   text-transform: uppercase;
   font-size: 1.5rem;
   text-decoration: none;
-  margin-top: 3rem;
+  margin-top: 9rem;
   border: none;
   box-shadow: .2rem .2rem .2rem #7f7f7f;
 }
@@ -180,6 +180,7 @@ nav {
 .plan-description {
   height: 70rem;
   margin-top: 4rem;
+    font-weight: bolder;
 }
 
 .plan-description h3 {
